# scigraph

./: .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  docker_run.sh  go.mod  go.sum  makefile
schema/: cti-schema-v2.tql  kb-schema.tql
scripts/db/local/: configure-local-db.sh  db_setup.sh  install DB.txt  start_db.sh  stop_db.sh
scripts/dev/: rebuild_all.sh
scripts/docker/db/: build_image.sh  run_image.sh
scripts/infinite/: build_image.sh  docker_container_remove.sh  docker_container_run.sh  docker_exec.sh  docker_run.sh  docker_start.sh  entrypoint.sh  restApiConfig.xml  restConfig.xml  restart.sh  run.sh  run_image.sh  start.sh  stop.sh
scripts/infinite/examples/: rentalFleetSchema.json
scripts/infinite/examples/example1/: README.md  createData.do  createSchema.do  runExample.bat  runExample.sh  runQuery.do
scripts/infinite/examples/example2/: Calls.csv  People.csv  Phones.csv  README.md  createData.do  createSchema.do  runExample.bat  runExample.sh  runQuery2.do
src/: BUILD.bazel
src/clients/: BUILD.bazel
src/clients/gdn_client/: BUILD.bazel  client.go  client_config.go  client_const.go  client_error.go  client_request.go  client_response.go  client_util.go  collection.go  document.go  document_many.go  interface.go  req_collection.go  util.go
src/clients/gdn_client/gdn_types/: BUILD.bazel  collection_types.go
src/clients/gdn_client/requests/: BUILD.bazel  addNewReqRes.sh  create_new_collection.go  delete_collection.go  get_all_collections.go  get_collection_info.go  shared.go  truncate_collection.go  update_collection.go
src/clients/gdn_client/requests/collection_req/: BUILD.bazel  addNewReqRes.sh  create_new_collection.go  delete_collection.go  get_all_collections.go  get_collection_info.go  shared.go  truncate_collection.go  update_collection.go
src/clients/gdn_client/requests/document_req/: BUILD.bazel  addNewReqRes.sh  create_document.go  delete_document.go  delete_parameters.go  get_document.go  get_document_header.go  replace_document.go  shared.go  update_document.go
src/clients/infinity/: curl.txt
src/clients/infinity/rest/: client.go
src/clients/infinity_client/: BUILD.bazel
src/clients/infinity_client/rest/: BUILD.bazel  client.go  client_config.go  client_request.go  client_response.go  client_util.go
src/clients/infinity_client/rest/server/: BUILD.bazel  uptime.go
src/clients/infinity_client/rest_test/: BUILD.bazel  client_test.go  uptime_test.go
src/clients/pgdb_client/: BUILD.bazel  flags.go  pgdb_client.go  pgdb_client_workflow.go
src/cmd/: BUILD.bazel
src/cmd/paper_loader/: BUILD.bazel  main.go
src/cmd/paper_loader/app/: BUILD.bazel  aNew.go  flags.go  init.go  process_nlp.go  process_nlp_graph.go  process_print.go  state.go  utils.go  utils_process.go  utils_query.go  utils_search.go  workflow.go  workflow_test.go
src/cmd/sandbox/: BUILD.bazel  main.go
src/cmd/test/: BUILD.bazel  main.go
src/config/: BUILD.bazel
src/config/dbg_config/: BUILD.bazel  dbg_clients.go
src/types/: BUILD.bazel
src/types/collection_types/: BUILD.bazel  README.md  error.go  order_kv_holder.go  order_map.go  order_map_sync.go  ring.go  rolling_window.go  rolling_window_test.go
src/types/config_types/: BUILD.bazel  channel_config.go  crypto_config.go  db_config.go  dns_config.go  enum_channels.go  enum_data_channels.go  enum_env.go  enum_exchange.go  enum_service_name.go  enum_timeframes.go  imx_config.go  integration_model.go  main_config.go  nats_config.go  service_config.go  service_model.go  smx_config.go
src/types/graph_types/: BUILD.bazel  dag.go  dag_test.go  dot.go  dot_test.go  edge_test.go  graph.go  graph_test.go  interfaces.go  marshal.go  marshal_test.go  readme.md  set.go  set_test.go  tarjan.go  tarjan_test.go  test_types.go
src/types/interface_types/: BUILD.bazel  init_function.go  service.go
src/types/kb_types/: BUILD.bazel  aNewArticle.go  article.go  articleNew.go  author.go  authorNew.go  category.go  categoryNew.go  concept.go  conceptNew.go  link.go  linkNew.go  text.go  textNew.go  timestr.go  timestrNew.go
src/utils/: BUILD.bazel
src/utils/crypto_utils/: BUILD.bazel  crypto_utils.go  hash.go  uuid.go
src/utils/dbg_utils/: BUILD.bazel  dbg.go  dbg_error.go  dbg_log.go  dbg_requests.go  dbg_response.go  dbg_structs.go  dbg_utils.go
src/utils/math_utils/: BUILD.bazel  utils_min_max.go
src/utils/net_utils/: BUILD.bazel
src/utils/net_utils/http_handler/: BUILD.bazel  handler.go
src/utils/printing_utils/: BUILD.bazel  init_print_utils.go  service_headers.go
test/clients/gdn_client/collection/: BUILD.bazel  collection_test.go
test/clients/gdn_client/document/: BUILD.bazel  document_many_test.go  document_test.go  utils.go
