load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":pgdb_client",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "pgdb_client",
    srcs = [
        "flags.go",
        "pgdb_client.go",
        "pgdb_client_workflow.go",
    ],
    importpath = "scigraph/src/clients/pgdb_client",
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils/dbg_utils",
        "@com_github_go_pg_pg_v10//:pg",
        "@com_github_go_pg_pg_v10//orm",
    ],
)
