load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "scigraph/src/cmd/test",
    visibility = ["//visibility:private"],
    deps = ["@com_github_vesoft_inc_nebula_go_v3//:nebula-go"],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
