load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":kb_types",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "kb_types",
    srcs = [
        "aNewArticle.go",
        "article.go",
        "author.go",
        "category.go",
        "link.go",
        "text.go",
        "timestr.go",
    ],
    importpath = "scigraph/src/types/kb_types",
    visibility = ["//visibility:public"],
    deps = ["@com_github_marvin_hansen_arxiv//v1:arxiv"],
)
