load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":kb_types",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "kb_types",
    srcs = [
        "article.go",
        "articleNew.go",
        "author.go",
        "authorNew.go",
        "category.go",
        "categoryNew.go",
        "concept.go",
        "conceptNew.go",
        "link.go",
        "linkNew.go",
        "timestr.go",
        "timestrNew.go",
    ],
    importpath = "scigraph/src/types/kb_types",
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils/crypto_utils",
        "@com_github_marvin_hansen_arxiv//v1:arxiv",
    ],
)
