load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "rest",
    srcs = [
        "client.go",
        "client_config.go",
        "client_request.go",
        "client_response.go",
        "client_util.go",
        "errors.go",
        "req_interface.go",
        "req_server.go",
    ],
    importpath = "scigraph/src/clients/infinity_client/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//src/clients/infinity_client/rest/server",
        "@com_github_json_iterator_go//:go",
        "@com_github_valyala_fasthttp//:fasthttp",
    ],
)
