load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "collection_test",
    srcs = ["collection_test.go"],
    deps = [
        "//src/clients/gdn_client",
        "//src/clients/gdn_client/gdn_types",
        "//src/clients/gdn_client/requests/collection_req",
        "@com_github_stretchr_testify//assert",
    ],
)
