load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "document_test",
    srcs = ["document_test.go"],
    embed = [":document"],
    deps = [
        "//src/clients/gdn_client",
        "//src/clients/gdn_client/requests/document_req",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "document",
    srcs = ["utils.go"],
    importpath = "scigraph/test/clients/gdn_client/document",
    visibility = ["//visibility:public"],
    deps = ["//src/clients/gdn_client"],
)
