load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "document_req",
    srcs = [
        "create_document.go",
        "delete_document.go",
        "shared.go",
        "update_document.go",
    ],
    importpath = "scigraph/src/clients/gdn_client/requests/document_req",
    visibility = ["//visibility:public"],
)
