load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "document_req",
    srcs = [
        "create_document.go",
        "create_parameters.go",
        "delete_document.go",
        "delete_many_documents.go",
        "delete_parameters.go",
        "replace_document.go",
        "shared.go",
        "update_document.go",
        "update_parameters.go",
    ],
    importpath = "scigraph/src/clients/gdn_client/requests/document_req",
    visibility = ["//visibility:public"],
)
